--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -6,13 +6,47 @@
 
   <div class="row mb-3">
     <div class="col">
-        <label class="form-label">Continente</label>
-        <select
-        formControlName="region"
-        class="form-control">
-            <option value="">-- Seleccione continente --</option>
-            
-        </select>
+      <label class="form-label">Continente</label>
+      <select formControlName="region" class="form-control">
+        <option value="">-- Seleccione continente --</option>
+        <option *ngFor="let region of regions" [value]="region">
+          {{ region }}
+        </option>
+      </select>
+    </div>
+  </div>
+
+  <!-- Countries -->
+
+  <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">País</label>
+      <select formControlName="country" class="form-control">
+        <option value="">-- Seleccione País --</option>
+        <option
+          *ngFor="let country of countriesByRegion"
+          [value]="country.cca3"
+        >
+          {{ country.name }}
+        </option>
+      </select>
+    </div>
+  </div>
+
+  <!-- Borders -->
+
+  <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">Frontera</label>
+      <select formControlName="border" class="form-control">
+        <option value="">-- Seleccione la frontera --</option>
+        <option
+          *ngFor="let country of borders"
+          [value]="country.cca3"
+        >
+          {{ country.name }}
+        </option>
+      </select>
     </div>
   </div>
 </form>
@@ -20,7 +54,7 @@
 <h3>Formulario</h3>
 
 <code>
-    {{myForm.value| json}}
+  {{ myForm.value | json }}
 </code>
 
-<p>isFormValid: {{ myForm.valid}}</p>
+<p>isFormValid: {{ myForm.valid }}</p>
